# ts-forecasting-project

./: .gitignore  README.md  requirements.txt
Finial_notebooks/: 01_EDA.ipynb  02_classical_codex.ipynb  04_quantile_regression_codex.ipynb
Finial_notebooks/exact_chosen_series_plots/: chosen_series_exact_summary.csv
Finial_notebooks/quantile_outputs/: quantile_fold_metrics.csv  quantile_test_audit.csv  (+3 more)
claude_forecasting/: .gitignore  README.md  pyproject.toml
claude_forecasting/notebooks/: 00_data_structure.ipynb
claude_forecasting/report/: main.tex
claude_forecasting/report/sections/: 01_problem_statement.tex  02_targets_and_series.tex  03_skill_score.tex  04_eda.tex
claude_forecasting/src/cf/: __init__.py  features.py  io.py  metrics.py  splits.py  viz.py
codex_notebooks/: 00_project_map.ipynb  01_eda.ipynb  02_classical.ipynb  03_deep.ipynb  README.md  __init__.py  support.py
notebooks/: 01_EDA_claude.ipynb  01_eda.ipynb  02_classical_codex.ipynb  02_classical_models.ipynb  02_classical_models_claude.ipynb  03_ml_models.ipynb  03_ml_models_codex.ipynb  04_deep_learning.ipynb  05_ensemble_hybrid.ipynb  06_comparison_report.ipynb  eda-hf.ipynb  kaushal03_deep_sequence_models_chosen.ipynb
scripts/: append_quantile_regression_slide.py  build_beamer_deck.py  build_beamer_pdf.py  build_codex_artifacts.py  build_presentation_pdf.py  execute_codex_notebooks.py  export_beamer_data.py  extract_beamer_figures.py  generate_codex_notebooks.py  generate_intro_eda_beamer_assets.py  generate_quantile_notebook.py  presentation_deck_v2.py  replace_last_pdf_page.swift
(+12 files in other folders)
